# modular_ik_solver

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
RhinoPython/: GHMockUp.gh  KangarooMockup.gh  PythonWebServer.txt  RhinoMckUp.3dm  RhinoMckUp_2.3dm  SimPackager.gh  SimPackager_V2.gh  SimPackager_V3.gh  SimPackager_V3_3DLink.gh  SimPackager_V3_Demo_6DofArm.gh  SimPackager_V3_FiceAxisMill.gh  SimPackager_V3_OneDOFArm.gh  SimPackager_V3_SixDofArmOnRail.gh  log.txt  log_ProgressiveAlpha10.txt  log_ProgressiveAlpha100.txt  log_ProgressiveAlpha1000.txt  output.txt  simSetup.txt  sliderform.py  starmaker.py
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp  mechanisms.h
src/guiLib/: app.h  colormap.h
src/optLib/: AutoDiff.h  GradientDescentMinimizer.h  Minimizer.h  NewtonFunctionMinimizer.h  ObjectiveFunction.h  OptLogger.h  RandomMinimizer.h
src/rbSimLib/: CMakeLists.txt  Joint.h  Joint3D.h  KinematicEnergy.h  KinematicEnergy3D.h  MechanismOptimizer.h  RigidBody.h  RigidBody3D.h  RigidBodySimulation.h  RigidBodySimulation3D.h  dummy.cpp
src/tests/: CMakeLists.txt  main.cpp
